--- a/pages/hospital/ency.wxml
+++ b/pages/hospital/ency.wxml
@@ -1,4 +1,4 @@
-<view  class='w100p bg-fff'>
+<view class='w100p bg-fff'>
   <view class='r1 proency'>
     <view bindtap='pickPro' data-idx="{{index}}" class='col proitem {{index==curId?"border":""}}' wx:for="{{title}}" wx:key="{{index}}">
       <image class='proimg mt10' src='{{item.src}}' mode='aspectFill'></image>
@@ -17,6 +17,15 @@
   </scroll-view>
   <view class='projectLine ml40'></view>
   <view class='ml40 col'>
-     <view wx:key="{{index}}" wx:for="{{proTwo}}"></view>
+    <view class='mt20 f28' wx:key="{{index}}" wx:for="{{projectDetail}}">
+      <view class='r1 mt20'>
+        <view class='projectNameLine'></view>
+        <view class='f30 ml20 b'>{{item.proName}}</view>
+        <view style='position:absolute;right:40rpx;color:#ddd;margin-top:2rpx;' class='iconfont2 icon-qianjin'></view>
+      </view>
+      <view class='r1 ml8 r-wrap'>
+        <view wx:key="{{index}}" wx:for="{{item.sm_project}}" class='sm-project ml20 mt20'>{{item}}</view>
+      </view>
+    </view>
   </view>
 </view>
