--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -99,7 +99,7 @@ margin-top:100rpx;
 }
 .proitem{
   width: 130rpx;
-  height: 200rpx;
+  height: 160rpx;
 }
 .srcoll{
   width: 700rpx;
@@ -122,7 +122,7 @@ margin-left:30rpx;
 }
 .scroll2{
   width: 750rpx;
-  height: 140rpx;
+  height: 160rpx;
 
 }
 .serve-img{
@@ -144,7 +144,7 @@ height:80rpx;
 height:24rpx;
 position:absolute;
 z-index:6;
-margin-top:120rpx;
+margin-top:140rpx;
 margin-left:26rpx;
 }
 /* 瀑布流 */
@@ -292,4 +292,24 @@ border-radius: 20rpx;
   width: 710rpx;
   height: 2rpx;
   background-color: #ddd;
+}
+.projectNameLine{
+  width:8rpx;
+height:36rpx;
+background-color:#000;
+margin-top:4rpx;
+border-radius:10rpx;
+
+}
+.sm-project{
+  width: 180rpx;
+  height: 40rpx;
+  padding-top: 2rpx;
+  border-radius: 50rpx;
+  border: 1rpx solid #e7e7e7;
+  background-color: #e7e7e7;
+  text-align: center;
+}
+.r-wrap{
+  flex-wrap:wrap;
 }
