--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -240,4 +240,16 @@ animation-delay: 1.5s; /*第二个span动画延迟1.5秒*/
 .mright{
   width: 320rpx;
 }
+.adminBtn{
+ width:120rpx;
+height:44rpx;
+color:#fff;
+border-radius:50rpx;
+border:2rpx solid #ddd;
+text-align:center;
+position:absolute;
+right:90rpx;
+margin-top:80rpx;
+
+}
 
