--- a/pages/counselorDetail/counselorDetail.wxss
+++ b/pages/counselorDetail/counselorDetail.wxss
@@ -36,7 +36,7 @@ left:150rpx; */
 
 .wrap {
   flex-wrap: wrap;
-  height: 110rpx;
+  /* height: 110rpx; */
 }
 
 .skill {
@@ -55,7 +55,7 @@ left:150rpx; */
   margin-top: 20rpx;
   border: 1rpx solid #f5f5f5;
   border-radius: 20rpx;
-  box-shadow: 1rpx 1rpx 20rpx #ddd;
+  box-shadow:6rpx 6rpx 20rpx #ddd;
   padding-bottom: 46rpx;
 }
 
