--- a/pages/hospital/ency.wxml
+++ b/pages/hospital/ency.wxml
@@ -11,20 +11,20 @@
     <view wx:if="{{curId==0}}" class='r1'>
       <view wx:key="{{index}}" wx:for="{{proTwo}}" class='col {{index==0?"ml40":"ml30"}} {{index==proTwo.length-1 ?"pr20":""}}'>
         <image mode='aspectFill' class='projectimg' src='{{item.proImage.path}}'></image>
-        <view class='f24 b mt20 cen '>{{item.proName}}</view>
+        <view class='f28 b mt20 cen '>{{item.proName}}</view>
       </view>
     </view>
   </scroll-view>
   <view class='projectLine ml40'></view>
   <view class='ml40 col'>
-    <view class='mt20 f28' wx:key="{{index}}" wx:for="{{projectDetail}}">
+    <view class='mt20 f28' wx:for-item="project" wx:key="{{index}}" wx:for="{{projectDetail}}">
       <view class='r1 mt20'>
         <view class='projectNameLine'></view>
-        <view class='f30 ml20 b'>{{item.proName}}</view>
+        <view class='f30 ml20 b'>{{project.proName}}</view>
         <view style='position:absolute;right:40rpx;color:#ddd;margin-top:2rpx;' class='iconfont2 icon-qianjin'></view>
       </view>
       <view class='r1 ml8 r-wrap'>
-        <view wx:key="{{index}}" wx:for="{{item.sm_project}}" class='sm-project ml20 mt20'>{{item}}</view>
+        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>{{item}}</view>
       </view>
     </view>
   </view>
