--- a/pages/hospital/hospital.wxml
+++ b/pages/hospital/hospital.wxml
@@ -8,18 +8,18 @@
 </view>
 <view wx:else>
   <view style='padding-bottom:100rpx;'>
-    <swiper indicator-dots class='hoswiper ml40 mt20'>
+    <swiper indicator-dots class='hoswiper mt20'>
       <swiper-item>
         <image class='hoswiper' mode="aspectFill" src='{{BigPoster[0].image.path}}'></image>
       </swiper-item>
     </swiper>
-    <scroll-view scroll-x="true" class='mt30 scroll2'>
+    <scroll-view scroll-x="true" class='mt40 scroll2'>
       <view class='r1 '>
         <view data-tag="{{item.id}}" bindtap='serveChange' wx:key="{{index}}" wx:for="{{serves}}" class='col serve-item {{item.id==0?"ml40":"ml80"}} {{item.id==4?"pr20":""}}'>       
         <!-- <view data-tag="{{item.id}}" bindtap='{{item.id==2?"alert":"serveChange"}}' wx:key="{{index}}" wx:for="{{serves}}" class='col serve-item {{item.id==0?"ml40":"ml80"}} {{item.id==4?"pr20":""}}'> -->
           <image mode='aspectFit ' class='serve-img' src='{{item.path}} '></image>
           <view class='mt20 w80 cen {{item.id==serveId?"f24 c00 b":"f24 c9b"}}'>{{item.name}}</view>
-          <image mode='aspectFit' wx:if="{{item.id==serveId}}" class='serve-logo' src='../../images/three.png'></image>
+          <image mode='aspectFill' wx:if="{{item.id==serveId}}" class='serve-logo' src='../../images/three.png'></image>
         </view>
       </view>
     </scroll-view>
