--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -112,13 +112,15 @@ border-radius:50%;
 margin-left:30rpx;
 }
 .border{
-  border: 4rpx solid #e6eff1;
+  border: 4rpx solid #c7e0e1;
+  background-color:#c7e0e1;
+
 }
 
 .hoswiper{
-  width: 670rpx;
-  height: 300rpx;
-  border-radius:20rpx;
+  width: 750rpx;
+  height: 403rpx;
+ 
 }
 .scroll2{
   width: 750rpx;
@@ -126,9 +128,9 @@ margin-left:30rpx;
 
 }
 .serve-img{
- width:80rpx;
-height:80rpx;
-
+ width:72rpx;
+height:72rpx;
+margin-left: 4rpx;
 }
 .serve-item{
   width: 82rpx;
@@ -145,7 +147,7 @@ height:24rpx;
 position:absolute;
 z-index:6;
 margin-top:140rpx;
-margin-left:26rpx;
+margin-left:28rpx;
 }
 /* 瀑布流 */
 .falls{
@@ -298,7 +300,7 @@ border-radius: 20rpx;
 height:36rpx;
 background-color:#000;
 margin-top:4rpx;
-border-radius:10rpx;
+border-radius:20rpx;
 
 }
 .sm-project{
