--- a/pages/addNote/addNote.wxml
+++ b/pages/addNote/addNote.wxml
@@ -1,8 +1,4 @@
-<!--pages/addNote/addNote.wxml-->
-<!-- <cover-view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <cover-view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>添加日记</cover-view>
-</cover-view>
-<view style='height:{{height4*2+20}}px;' class='pad'></view> -->
+
 <header canGoIndex="true" title="写日记"></header>
 <textarea cursor-spacing="10" bindtap='focusChange'  adjust-position='{{true}}' bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'>
 <cover-view></cover-view>
@@ -22,6 +18,7 @@
 </view>
 <view class='line'></view>
 <button bindtap='submit' class='btn'>发布</button>
+<view style='padding-bottom:200rpx;'></view>
 <view style='top:{{height4*2+20}}px' class='mask2' wx:if='{{isMakingPoster}}'>
   <image src='../../images/loading2.svg' style='width:68px' mode='widthFix' />
   <view class='text-sm text-trivial'>正在提交</view>
