--- a/pages/hospital/ency.wxml
+++ b/pages/hospital/ency.wxml
@@ -1,3 +1,5 @@
+<wxs module="filter" src="../../utils/getdatr.wxs">
+</wxs>
 <view class='w100p bg-fff'>
   <view class='r1 proency'>
     <view bindtap='pickPro' data-idx="{{index}}" class='col proitem {{index==curId?"border":""}}' wx:for="{{title}}" wx:key="{{index}}">
@@ -5,7 +7,7 @@
       <view class='{{index==curId?"f32 b c00":"c9b f32"}} cen mt20'>{{item.name}}</view>
     </view>
   </view>
-  <view wx:if="{{curId==0}}" class='cen f28 b c00 mt20'>热门项目</view>
+  <!-- <view wx:if="{{curId==0}}" class='cen f28 b c00 mt20'>热门项目</view>
   <view wx:else class='cen f28 b c00 mt20'>热门品牌</view>
   <scroll-view scroll-x="true" class='scroll mt20'>
     <view wx:if="{{curId==0}}" class='r1'>
@@ -14,17 +16,20 @@
         <view class='f28 b mt20 cen '>{{item.proName}}</view>
       </view>
     </view>
-  </scroll-view>
-  <view class='projectLine ml40'></view>
+  </scroll-view> -->
+  <!-- <view class='projectLine ml40'></view> -->
   <view class='ml40 col'>
     <view class='mt20 f28' wx:for-item="project" wx:key="{{index}}" wx:for="{{projectDetail}}">
       <view class='r1 mt20'>
         <view class='projectNameLine'></view>
         <view class='f30 ml20 b'>{{project.proName}}</view>
-        <view style='position:absolute;right:40rpx;color:#ddd;margin-top:2rpx;' class='iconfont2 icon-qianjin'></view>
+        <view data-title='{{project.proName}}' data-idx='99' data-key="{{project.proName}}" bindtap='goProjectDetail' style='position:absolute;right:40rpx;color:#ddd;margin-top:2rpx;padding-left:20rpx;' class='iconfont2 icon-qianjin'></view>
       </view>
       <view class='r1 ml8 r-wrap'>
-        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>{{item}}</view>
+        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>
+        <block wx:if="{{item.length<6}}">{{item}}</block>
+        <block wx:else>{{filter.Limit3(item,5)}}</block>
+        </view>
       </view>
     </view>
   </view>
