--- a/pages/projectDetail/projectDetail.wxss
+++ b/pages/projectDetail/projectDetail.wxss
@@ -1,1 +1,42 @@
 /* pages/projectDetail/projectDetail.wxss */
+.line{
+  width: 750rpx;
+  height: 1rpx;
+  background-color: #d9d9d9;
+}
+.pscroll{
+ width:750rpx;
+height:80rpx;
+border-top:1rpx solid #f5f5f5;
+border-bottom:1rpx solid #ddd;
+box-shadow:-1rpx 6rpx 10rpx #f5f5f5;
+
+}
+.c85e{
+  color: #85e4d2
+}
+.project{
+  width:670rpx;
+max-height:500rpx;
+/* border:1rpx solid #f5f5f5; */
+border-radius:15rpx;
+box-shadow:2rpx 2rpx 20rpx #ddd;
+
+}
+.line2{
+  width: 8rpx;
+  height: 50rpx;
+  background-color: #85e4d2;
+  border-radius:20rpx;
+}
+.line3{
+  width: 630rpx;
+  margin-left: 20rpx;
+  background-color: #ddd;
+}
+.detail{
+ position:absolute;
+right:70rpx;
+margin-top:2rpx;
+
+}
