--- a/pages/drugDetail/drugDetail.wxml
+++ b/pages/drugDetail/drugDetail.wxml
@@ -7,18 +7,28 @@
       <view class='iconf'>
         <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-xiangmu'></view>
       </view>
-      <view class='b c00 f32 le3 ml10'>药品概要</view>
+      <view wx:if="{{drugDetail.proNum==2}}" class='b c00 f32 le3 ml10'>药品概要</view>
+      <view wx:if="{{drugDetail.proNum==3}}" class='b c00 f32 le3 ml10'>仪器概要</view>
+      <view wx:if="{{drugDetail.proNum==4}}" class='b c00 f32 le3 ml10'>材料概要</view>
     </view>
 
-    <view class='f28 c00 mt30 le3'>药品简介</view>
+    <view wx:if="{{drugDetail.proNum==2}}" class='f28 c00 mt30 le3'>药品简介</view>
+    <view wx:if="{{drugDetail.proNum==3}}" class='f28 c00 mt30 le3'>仪器简介</view>
+    <view wx:if="{{drugDetail.proNum==4}}" class='f28 c00 mt30 le3'>材料简介</view>
     <view class='mt20 f28 le3 lh40 c88'>{{drugDetail.detail}}</view>
-    <view class='f28  c00 mt30 le3'>药品特色</view>
+    <view wx:if="{{drugDetail.proNum==2}}" class='f28  c00 mt30 le3'>药品特色</view>
+    <view wx:if="{{drugDetail.proNum==3}}" class='f28 c00 mt30 le3'>仪器特色</view>
+    <view wx:if="{{drugDetail.proNum==4}}" class='f28 c00 mt30 le3'>材料特色</view>
     <view class='mt20 f28 le3 lh40 c88'>{{drugDetail.feature}}</view>
     <block wx:if="{{drugDetail.otherName!=null}}">
-      <view class='f28  c00 mt30 le3'>药品别名</view>
+      <view wx:if="{{drugDetail.proNum==2}}" class='f28  c00 mt30 le3'>药品别名</view>
+      <view wx:if="{{drugDetail.proNum==3}}" class='f28 c00 mt30 le3'>仪器别名</view>
+      <view wx:if="{{drugDetail.proNum==4}}" class='f28 c00 mt30 le3'>材料别名</view>
       <view class='mt20 f28 le3 lh40 c88'>{{drugDetail.otherName}}</view>
     </block>
-    <view class='f28  c00 mt30 le3'>药品档案</view>
+    <view wx:if="{{drugDetail.proNum==2}}" class='f28  c00 mt30 le3'>药品档案</view>
+    <view wx:if="{{drugDetail.proNum==3}}" class='f28 c00 mt30 le3'>仪器档案</view>
+    <view wx:if="{{drugDetail.proNum==4}}" class='f28 c00 mt30 le3'>材料档案</view>
     <view wx:if="{{drugDetail.brand!=null}}" class='mt20 f28 le3 lh40 c88'>品牌:
       <span class="cecf">{{drugDetail.brand}}</span>
     </view>
@@ -34,11 +44,13 @@
     <view class='ml30 w690'>
       <view class='r1 mt30'>
         <view class='iconf'>
-          <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-dangan'></view>
+          <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-jiangzhangxunzhang'></view>
         </view>
         <view class='b c00 f32 le3 ml10'>认证</view>
       </view>
-      <view class='mt20 f28 le3 lh40 c88'>该药品已获得以下认证</view>
+      <view wx:if="{{drugDetail.proNum==2}}" class='mt20 f28 le3 lh40 c88'>该药品已获得以下认证</view>
+      <view wx:if="{{drugDetail.proNum==3}}" class='mt20 f28 le3 lh40 c88'>该仪器已获得以下认证</view>
+      <view wx:if="{{drugDetail.proNum==4}}" class='mt20 f28 le3 lh40 c88'>该材料已获得以下认证</view>
       <block class="r1 mt10">
         <image wx:if="{{'http://img2.soyoung.com/item/20171020/0/20171020203800705.png'==drugDetail.certify1||'http://img2.soyoung.com/item/20171020/0/20171020203800705.png'==drugDetail.certify2||'http://img2.soyoung.com/item/20171020/0/20171020203800705.png'==drugDetail.certify3}}"
           class='img' src='../../images/cfda.jpg' mode="aspectFit" />
@@ -51,84 +63,87 @@
       </block>
     </view>
   </block>
-
-  <view class='mt20 line'></view>
-  <view class='ml30 w690'>
-    <view class='r1 mt30'>
-      <view class='iconf'>
-        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-dangan'></view>
+  <block wx:if="{{drugDetail.proNum==2}}">
+    <view class='mt20 line'></view>
+    <view class='ml30 w690'>
+      <view class='r1 mt30'>
+        <view class='iconf'>
+          <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-dangan'></view>
+        </view>
+        <view class='b c00 f32 le3 ml10'>药品参数</view>
       </view>
-      <view class='b c00 f32 le3 ml10'>药品参数</view>
-    </view>
 
-    <view wx:if="{{drugDetail.model!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>型号</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.model}}</view>
+      <view wx:if="{{drugDetail.model!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>型号</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.model}}</view>
+      </view>
+      <view wx:if="{{drugDetail.concentration!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>浓度</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.concentration}}</view>
+      </view>
+      <view wx:if="{{drugDetail.molecular!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>分子量</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.molecular}}</view>
+      </view>
+      <view wx:if="{{drugDetail.composition!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>成分</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.composition}}</view>
+      </view>
+      <view wx:if="{{drugDetail.character!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>性质类型</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.character}}</view>
+      </view>
+      <view wx:if="{{drugDetail.standare!=null}}" class="r1 wauto">
+        <view class='mt20 f28 c00 le3 w200'>规格</view>
+        <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.standare}}</view>
+      </view>
     </view>
-    <view wx:if="{{drugDetail.concentration!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>浓度</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.concentration}}</view>
-    </view>
-    <view wx:if="{{drugDetail.molecular!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>分子量</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.molecular}}</view>
-    </view>
-    <view wx:if="{{drugDetail.composition!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>成分</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.composition}}</view>
-    </view>
-    <view wx:if="{{drugDetail.character!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>性质类型</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.character}}</view>
-    </view>
-    <view wx:if="{{drugDetail.standare!=null}}" class="r1 wauto">
-      <view class='mt20 f28 c00 le3 w200'>规格</view>
-      <view class='mt20 f28 c88 ml30 le3'>{{drugDetail.standare}}</view>
-    </view>
-  </view>
+  </block>
   <block wx:if="{{drugDetail.advantage!=null&&drugDetail.defect!=null}}">
-  <view class='mt20 line'></view>
-  <view class='ml30 w690'>
-    <view class='r1 mt30'>
-      <view class='iconf'>
-        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-dangan'></view>
+    <view class='mt20 line'></view>
+    <view class='ml30 w690'>
+      <view class='r1 mt30'>
+        <view class='iconf'>
+          <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+        </view>
+        <view class='b c00 f32 le3 ml10'>优缺点</view>
       </view>
-      <view class='b c00 f32 le3 ml10'>优缺点</view>
+      <block wx:if="{{drugDetail.advantage!=null}}">
+        <view class='f28 c00 mt30 le3'>优点：</view>
+        <view class='mt20'>
+          <text class='f28 le3 lh40 c88'>{{drugDetail.advantage}}
+      </text>
+        </view>
+      </block>
+      <block wx:if="{{drugDetail.defect!=null}}">
+        <view class='f28  c00 mt30 le3'>缺点：</view>
+        <view class='mt20'>
+          <text class='f28 le3 lh40 c88'>{{drugDetail.defect}}
+      </text>
+        </view>
+      </block>
     </view>
-    <block wx:if="{{drugDetail.advantage!=null}}">
-      <view class='f28 c00 mt30 le3'>优点：</view>
-      <view class='mt20'>
-        <text class='f28 le3 lh40 c88'>{{drugDetail.advantage}}
-      </text>
-      </view>
-    </block>
-    <block wx:if="{{drugDetail.defect!=null}}">
-      <view class='f28  c00 mt30 le3'>缺点：</view>
-      <view class='mt20'>
-        <text class='f28 le3 lh40 c88'>{{drugDetail.defect}}
-      </text>
-      </view>
-    </block>
-  </view>
   </block>
   <block wx:if="{{drugDetail.theory!=null}}">
-  <view class='mt20 line'></view>
-  <view class='ml30 w690'>
-    <view class='r1 mt30 '>
-      <view class='iconf'>
-        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
-      </view>
-      <view class='f32 ml10 b c00 le3'>药品原理</view>
+    <view class='mt20 line'></view>
+    <view class='ml30 w690'>
+      <view class='r1 mt30 '>
+        <view class='iconf'>
+          <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+        </view>
+        <view wx:if="{{drugDetail.proNum==2}}" class='f32 ml10 b c00 le3'>药品原理</view>
+        <view wx:if="{{drugDetail.proNum==3}}" class='f32 ml10 b c00 le3'>仪器原理</view>
+        <view wx:if="{{drugDetail.proNum==4}}" class='f32 ml10 b c00 le3'>材料原理</view>
 
+      </view>
+      <view class='f28 le3 lh40 c88 mt20'>{{drugDetail.theory}}</view>
     </view>
-    <view class='f28 le3 lh40 c88 mt20'>{{drugDetail.theory}}</view>
-  </view>
   </block>
   <view class='mt20 line'></view>
   <view class='ml30 w690'>
     <view class='r1 mt30 '>
       <view class='iconf'>
-        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yingyezhizhao'></view>
       </view>
       <view class='f32 ml10 b c00 le3'>操作档案</view>
     </view>
@@ -168,34 +183,34 @@
         <view class='f28 c88 ritem'>{{drugDetail.intelligence}}</view>
       </view>
 
-      <view class='le3 mt30 cen f28 ccc'>— 以上信息均为参考，实际以到院操作为准 —</view>
+      <view class='le3 mt30 cen f28 ccc pdb30'>— 以上信息均为参考，实际以到院操作为准 —</view>
     </view>
   </view>
   <block wx:if="{{drugDetail.after!=null}}">
-  <view class='mt20 line'></view>
-  <view class='r1 mt30 ml30'>
-    <view class='iconf'>
-      <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+    <view class='mt20 line'></view>
+    <view class='r1 mt30 ml30'>
+      <view class='iconf'>
+        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+      </view>
+      <view class='f32 ml10 b c00 le3'>术后反应</view>
+
     </view>
-    <view class='f32 ml10 b c00 le3'>术后反应</view>
 
-  </view>
-
-  <view class='ml30 w690'>
-    <text class='mt30 f28 c88 le3 lh40'>{{drugDetail.after}}</text>
-  </view>
+    <view class='ml30 w690'>
+      <text class='mt30 f28 c88 le3 lh40'>{{drugDetail.after}}</text>
+    </view>
   </block>
   <block wx:if="{{drugDetail.prompt!=null}}">
-  <view class='mt20 line'></view>
-  <view class='r1 mt30 ml30'>
-    <view class='iconf'>
-      <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
-    </view>
-    <view class='f32 ml10 b c00 le3'>安全提示</view>
+    <view class='mt20 line'></view>
+    <view class='r1 mt30 ml30'>
+      <view class='iconf'>
+        <view style='color:#fff;font-size:26rpx;margin-left:7rpx;margin-top:8rpx;' class='iconfont icon-yiyuan'></view>
+      </view>
+      <view class='f32 ml10 b c00 le3'>安全提示</view>
 
-  </view>
-  <view class='ml30 w690'>
-    <text class='mt30 f28 c88 le3 lh40'>{{drugDetail.prompt}}</text>
-  </view>
+    </view>
+    <view class='ml30 w690'>
+      <text class='mt30 f28 c88 le3 lh40'>{{drugDetail.prompt}}</text>
+    </view>
   </block>
 </view>
