--- a/pages/hospital/ency.wxml
+++ b/pages/hospital/ency.wxml
@@ -3,12 +3,12 @@
 <view class='w100p bg-fff'>
   <view class='r1 proency'>
     <!-- <view bindtap='{{index==0?"pickPro":"alert"}}' data-idx="{{index}}" class='col proitem {{index==curId?"border":""}}' wx:for="{{title}}" wx:key="{{index}}"> -->
-     <view bindtap='pickPro' data-idx="{{index}}" class='col proitem {{index==curId?"border":""}}' wx:for="{{title}}" wx:key="{{index}}">
+    <view bindtap='pickPro' data-idx="{{index}}" class='col proitem {{index==curId?"border":""}}' wx:for="{{title}}" wx:key="{{index}}">
       <image class='proimg mt10' src='{{item.src}}' mode='aspectFill'></image>
       <view class='{{index==curId?"f32 b c00":"c9b f32"}} cen mt20'>{{item.name}}</view>
     </view>
   </view>
-  <view  class='ml40 col'>
+  <view class='ml40 col'>
     <view class='mt20 f28' wx:for-item="project" wx:key="{{index}}" wx:for="{{projectDetail}}">
       <view class='r1 mt20'>
         <view class='projectNameLine'></view>
@@ -16,11 +16,27 @@
         <view wx:if="{{curId==0}}" data-title='{{project.proName}}' data-idx='99' data-key="{{project.proName}}" bindtap='goProjectDetail' style='position:absolute;right:40rpx;color:#ddd;margin-top:2rpx;padding-left:20rpx;' class='iconfont2 icon-qianjin'></view>
       </view>
       <view class='r1 ml8 r-wrap'>
-        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:if="{{index<12}}" wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>
-        <block wx:if="{{item.length<6}}">{{item}}</block>
-        <block wx:else>{{filter.Limit3(item,5)}}</block>
+        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:if="{{index<15}}" wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>
+          <block wx:if="{{item.length<6}}">{{item}}</block>
+          <block wx:else>{{filter.Limit3(item,5)}}</block>
         </view>
       </view>
+       <view wx:if="{{spread==true}}" class='r1 ml8 r-wrap'>
+        <view data-title="{{project.proName}}" data-idx="{{index}}" data-key='{{item}}' bindtap='goProjectDetail' wx:if="{{index>14}}" wx:key="{{index}}" wx:for="{{project.sm_project}}" class='sm-project ml20 mt20'>
+          <block wx:if="{{item.length<6}}">{{item}}</block>
+          <block wx:else>{{filter.Limit3(item,5)}}</block>
+        </view>
+      </view>
+      <block wx:if="{{project.sm_project.length>16}}">
+       <view wx:if="{{spread==false}}" bindtap='downDirection'  class='col direction mt20'>
+       <view  style='width:32rpx;transform:rotate(180deg)' class='iconfont icon-xiangshang'></view>
+       <view style='width:32rpx;transform:rotate(180deg);height:16rpx;' class='iconfont icon-xiangshang'></view>
+       </view>
+       <view wx:if="{{spread==true}}" bindtap='downDirection'  class='col direction mt20'>
+       <view  style='width:32rpx;height:16rpx;' class='iconfont icon-xiangshang'></view>
+       <view style='width:32rpx;' class='iconfont icon-xiangshang'></view>
+       </view>
+      </block>
     </view>
   </view>
 
