--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -78,9 +78,9 @@ margin-top:-2px;
   
 }
 .srecommend{
-width:350rpx;
+width:450rpx;
 height:100rpx;
-margin-left:200rpx;
+margin-left:150rpx;
 background-color:#fff;
 white-space:nowrap;
 display:flex;
@@ -92,5 +92,50 @@ z-index:999;
   height: 300rpx;
   margin-left:250rpx;
 margin-top:200rpx;
+
+}
+
+/* science */
+/* pages/projectDetail/projectDetail.wxss */
+.line{
+  width: 750rpx;
+  height: 1rpx;
+  background-color: #d9d9d9;
+}
+.pscroll{
+ width:750rpx;
+height:80rpx;
+border-top:1rpx solid #f5f5f5;
+border-bottom:1rpx solid #ddd;
+box-shadow:-1rpx 6rpx 10rpx #f5f5f5;
+
+}
+.c85e{
+  color: #85e4d2
+}
+.project{
+  width:670rpx;
+max-height:500rpx;
+/* border:1rpx solid #f5f5f5; */
+border-radius:15rpx;
+box-shadow:2rpx 2rpx 20rpx #ddd;
+background-color: #fff;
+
+}
+.line2{
+  width: 8rpx;
+  height: 50rpx;
+  background-color: #85e4d2;
+  border-radius:20rpx;
+}
+.line3{
+  width: 630rpx;
+  margin-left: 20rpx;
+  background-color: #ddd;
+}
+.detail{
+ position:absolute;
+right:70rpx;
+margin-top:2rpx;
 
 }
