--- a/pages/indexo/kind.wxml
+++ b/pages/indexo/kind.wxml
@@ -6,16 +6,12 @@
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else style='padding-top:0;'  class='body'>
+
   <view bindtap='goDetail' data-id='{{item.id}}' wx:key="{{item.id}}" class='kinds' wx:for="{{list}}">
-    <!-- <swiper wx:if="{{item.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" circular='false' class="kinds-img">
-      <swiper-item wx:key="{{index}}" wx:for="{{item.img}}" class="kinds-img">
-        <image class="kinds-img" mode="aspectFill" data-item="{{item}}" src="{{item}}" />
-      </swiper-item>
-    </swiper> -->
      <image wx:if="{{item.video==null}}" class="kinds-img" mode="aspectFill"  src="{{item.img[0]}}" />
-      <image class='video' mode='aspectFill' wx:if="{{item.video!=null}}" src='{{item.img[0]}}'>
+      <image class='kinds-img' mode='aspectFill' wx:if="{{item.video!=null}}" src='{{item.img[0]}}'>
       </image>
-    <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:248rpx;margin-left:315rpx;  font-size:60rpx;color:#fff;' class='iconfont icon-bofang'></view>
+    <view wx:if="{{item.video!=null}}" style='position:absolute;margin-top:305rpx;margin-left:305rpx;  font-size:60rpx;color:#fff;' class='iconfont icon-bofang'></view>
     <view class="kinds-title c9b">
      
       <text class='itext' wx:if="{{item.content.length>52}}">{{item.content}}</text>
