--- a/pages/video/video.wxml
+++ b/pages/video/video.wxml
@@ -1,8 +1,5 @@
 <!--pages/addNote/addNote.wxml-->
-<cover-view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <cover-view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>添加日记</cover-view>
-</cover-view>
-<view style='height:{{height4*2+20}}px;' class='pad'></view>
+<header canGoIndex="true" title="发视频"></header>
 <textarea cursor-spacing="10" bindtap='focusChange'  adjust-position='{{true}}' bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'>
 <cover-view></cover-view>
 </textarea>
@@ -13,8 +10,9 @@
 <button  bindtap='add'>添加视频</button>
 <button bindtap='addimg'>添加海报</button>
 <button bindtap='deleteVideo'>删除视频</button>
-<button bindtap='deleteimg'>删除海报</button>
+
 <button bindtap='submit' class='btn'>发布</button>
+<view style='padding-bottom:100rpx;'></view>
 <view style='top:{{height4*2+20}}px' class='mask2' wx:if='{{isMakingPoster}}'>
   <image src='../../images/loading2.svg' style='width:68px' mode='widthFix' />
   <view class='text-sm text-trivial'>正在提交</view>
