--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -48,7 +48,7 @@ page{
 .zan {
   margin-left: 20rpx;
   width: 700rpx;
-  margin-top: 50rpx;
+  margin-top: 30rpx;
   font-size: 26rpx;
   color: #d6d6d6;
   padding-left: 10rpx;
@@ -89,7 +89,7 @@ padding-left:10rpx;
 
 .content2 {
  margin-left:20rpx;
-margin-top:20rpx;
+/* margin-top:20rpx; */
 font-size:32rpx;
 width:700rpx;
 display:block;
@@ -121,8 +121,6 @@ line-height:50rpx;
   position: absolute;
   right: 20rpx;
   font-size:26rpx;
-  /* margin-top: -60rpx;
-  color: #fff; */
 }
 
 .share {
