--- a/pages/indexo/kind.wxml
+++ b/pages/indexo/kind.wxml
@@ -6,7 +6,7 @@
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else style='padding-top:0;'  class='body'>
-
+ <block wx:if="{{swiperIndex!=0}}">
   <view bindtap='goDetail' data-id='{{item.id}}' wx:key="{{item.id}}" class='kinds' wx:for="{{list}}">
      <image wx:if="{{item.video==null}}" class="kinds-img" mode="aspectFill"  src="{{item.img[0]}}" />
       <image class='kinds-img' mode='aspectFill' wx:if="{{item.video!=null}}" src='{{item.img[0]}}'>
@@ -18,4 +18,9 @@
       <text class='itext' wx:else>{{item.content}}</text>
     </view>
   </view>
+  <view wx:if="{{noMore==true}}" style='color:rgb(156, 155, 155);' class="cen w100p f30 lh60 le3 mt40">没有内容了</view>
+  </block>
+  <block wx:else>
+   <include src="video.wxml" />
+  </block>
 </view>
